# systemdmgr

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: cockpit-feature-parity.md  roadmap.md  spec.md  ssh.md
src/: app.rs  main.rs  service.rs  ui.rs
