[package]
name = "systemdmgr"
version = "0.0.9"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
unicode-width = "0.2"
ssh2 = "0.9.5"
ssh2-config = { git = "https://github.com/veeso/ssh2-config", rev = "3a9935222aa98a3374701eae2d283a6af74cdba8", default-features = false }
